--- a/css/stylescss.css
+++ b/css/stylescss.css
@@ -27,8 +27,8 @@ body {
     font-weight: 600;
     text-transform: uppercase; }
     body .btn-custom:hover {
-      border-color: #5eab99;
-      color: #5eab99; }
+      border-color: #3b621d;
+      color: #3b621d; }
   body .container-fluid {
     padding: 0; }
     body .container-fluid aside {
