--- a/css/stylescss.css
+++ b/css/stylescss.css
@@ -17,7 +17,7 @@ body {
   body a {
     color: #6c301a; }
     body a:hover {
-      color: #3b621d;
+      color: #fcf951;
       text-decoration: none; }
   body .btn-custom {
     background: transparent;
