--- a/css/stylescss.css
+++ b/css/stylescss.css
@@ -15,7 +15,7 @@ body {
     padding-left: 5%;
     margin-bottom: 3%; }
   body a {
-    color: #6c301a; }
+    color: white; }
     body a:hover {
       color: #fcf951;
       text-decoration: none; }
